--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>bigBiceps</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<style>
-	img{ border:5px -webkit-border-radius:10px; -moz-border-radius:10px; border-radius:10px;}
+	img{ border:5px -webkit-border-radius:20px; -moz-border-radius:20px; border-radius:40px;}
 </style>
 	</head>
 	<body background="arkaplan.jpg">
@@ -28,10 +28,21 @@
 	</center>
 
  
-<img src="resim.jpg" width="1280" height="720">
-<font color="#FFFFFF">	<h1>GÖZ ATILMASI GEREKENLER</h1></font>
-	<img src="piramit1.png" width="640" height="360" alt="Beslenme Piramidi">
-	<img src="piramit2.png" width="640" height="360" alt="Antrenman">
+<img src="resim.jpg" width="1280" height="500">
+		<center><font color="#FFFFFF" face="tahoma">	<h1>GÖZ ATILMASI GEREKENLER</h1></font></center>
+<div class="altkisim">
+		<div class="asagisol">
+			<img src="piramit1.png" width="640" height="360" alt="Beslenme Piramidi">
+			<font color="#FFFFFF" face="tahoma"><h1>BESLENME PİRAMİDİ</h1></font>
+			<a href="devaminioku2.html" >Devamını oku</a>
+		</div>
+		<div class="asagisag">
+			<img src="piramit2.png" width="640" height="360" alt="Antrenman">
+			<font color="#FFFFFF" face="tahoma"><h1>ANTRENMAN PİRAMİDİ</h1></font>
+			<a href="devaminioku.html">Devamını oku</a> 
+        </div>
+
+</div>
 
 
 	</body>
