--- a/haber.html
+++ b/haber.html
@@ -26,6 +26,21 @@
  			<img border="0" src="resim/button3.png"  width="200px" height="50px">
  			</a>
 	</center>
+	<div class="sayfa">
+    <div class="sliderKonum">
+        <div class="slider">
+            <a class="img-1" href="resim/img-1.jpg">
+                <img src="resim/img-1.jpg" width="700" height="500" >
+            </a>
+            <a class="img-2" href="resim/img-2.jpg">
+                <img src="resim/img-2.jpg" width="700" height="500" >
+            </a>
+            <a class="img-3" href="resim/img-3.jpg">
+                <img src="resim/img-3.jpg" width="700" height="500" > 
+            </a>
+        </div>
+    </div>
+</div>
 
 
 	</body>
