--- a/websayfam-master/ant.html
+++ b/websayfam-master/ant.html
@@ -26,6 +26,28 @@
  			<img border="0" src="resim/button3.png"  width="200px" height="50px">
  			</a>
 	</center>
+			<br><br><br><br><br><br><br>
+			
+				<div class="program1">
+					<TABLE BORDER> 
+						<TR> 
+							<TH>Birinci Gün (Pazartesi)</TH><TH>İkinci Gün (Çarşamba)</TH><TH>	Üçüncü Gün (Cuma)</TH> 
+						</TR> 
+						<TR> 
+							<TD>Squat 5x5</TD><TD>Squat 5x5</TD><TD>Squat 5x5</TD> 
+						</TR> 
+						<TR> 
+							<TD>Bench Press 5x5</TD><TD>Overhead Press 5x5</TD><TD>	Bench Press 5x5</TD> 
+						</TR> 
+						<TR> 
+							<TD>Ağırlıklı Barfiks 5x5</TD><TD>Deadlift 1x5</TD><TD>Bentover Row 5x5</TD> 
+						</TR>
+						<TR> 
+							<TD></TD><TD>Ağırlıklı Dips 5x5</TD><TD></TD> 
+						</TR>
+
+					</TABLE>
+				</div>
 
 
 	</body>
