--- a/websayfam-master/devaminioku2.html
+++ b/websayfam-master/devaminioku2.html
@@ -29,7 +29,7 @@
 	<br><br>
 	<div class="paragraf1" align="center">	
 	<p>
-		<font face="tahoma" size="5" color="black">
+		<font size="6" color="black">
 			<b>
 				
 			Fitness dünyasında çok fazla bilgi var. Spor salonlarında, internette, dergilerde onlarca mucizevi egzersiz tekniği, yüzlerce farklı antrenman programı öneriliyor. Tüm bunlar zaman zaman kafa karışıklığına neden olabiliyor. Eğer siz de benim gibiyseniz, amacınıza doğru giderken enerjinizi ve vaktinizi, gerçekten işe yarayan şeylere harcamak istersiniz. Bir başka deyişle, büyük resimde hangi faktörün ne kadar önemli olduğunu bilmek istersiniz.
@@ -40,7 +40,7 @@
 
 	<div class="paragraf2" align="center">
 		<p>
-		<font face="tahoma" size="5" color="black">
+		<font size="6" color="black">
 			<b>
 		Düzenli spor yapanlara baktığımızda 3 farklı tip göze çarpıyor. Birincisi, sağlıksız olanlar. Ne yazık ki sporcuların çoğu, aslında sporun amacının tam aksine kendilerine ya mental, ya da fiziksel olarak problemler yaşatıyorlar. Sporun sağlığımıza ve karakterimize katkısı olması gerekirken, bu kişiler spora yanlış yaklaştıkları için potansiyellerine asla ulaşamıyorlar. Biz bu gruptan olamayız. Fitness dünyasında çok fazla bilgi var. Spor salonlarında, internette, dergilerde onlarca mucizevi egzersiz tekniği, yüzlerce farklı antrenman programı öneriliyor. Tüm bunlar zaman zaman kafa karışıklığına neden olabiliyor. Eğer siz de benim gibiyseniz, amacınıza doğru giderken enerjinizi ve vaktinizi, gerçekten işe yarayan şeylere harcamak istersiniz. Bir başka deyişle, büyük resimde hangi faktörün ne kadar önemli olduğunu bilmek istersiniz.
 			</b>
@@ -50,7 +50,7 @@
 
 <div class="paragraf3" align="center">
 	<p>
-	<font face="tahoma" size="5" color="black">
+	<font size="6" color="black">
 		<b>Düzenli spor yapanlara baktığımızda 3 farklı tip göze çarpıyor. Birincisi, sağlıksız olanlar. Ne yazık ki sporcuların çoğu, aslında sporun amacının tam aksine kendilerine ya mental, ya da fiziksel olarak problemler yaşatıyorlar. Sporun sağlığımıza ve karakterimize katkısı olması gerekirken, bu kişiler spora yanlış yaklaştıkları için potansiyellerine asla ulaşamıyorlar. Biz bu gruptan olamayız.İşte bu rehber de bunu başarabilmeniz için, egzersiz biliminin temel prensiplerini sizi sıkmadan, pratik ve uygulanabilir şekilde aktarıyor. Kısa sürede 70.000’den fazla okunan bu rehberin, gerek kendinize antrenman programı hazırlarken, gerek bir başka programı uygularken oldukça yardımcı olacağına inanıyorum. Üstelik daha sonra duyacağınız fitness tavsiyelerini, hatta okuyacağınız ders kitaplarını veya akademik makaleleri dahi daha iyi analiz etmenizde de yardımcı olacağına inanıyorum.
 		</b>
 	</p>
