--- a/websayfam-master/index.html
+++ b/websayfam-master/index.html
@@ -8,7 +8,9 @@
 	img{ border:5px -webkit-border-radius:20px; -moz-border-radius:20px; border-radius:40px;}
 </style>
 	</head>
-	<body background="resim/arkaplan.jpg">
+	
+		<body background="resim/arkaplan.jpg">
+	<div class="ana">
 	<center>
 		<img src="resim/logo.png" width="500" height="70" alt="resim/image.jpg" />
  <br><br> <br><br>
@@ -44,6 +46,8 @@
 
 </div>
 
-
+	</div>
 	</body>
+	
+	
 </html>
