--- a/websayfam-master/devaminioku.html
+++ b/websayfam-master/devaminioku.html
@@ -8,22 +8,22 @@
 	img{ border:5px -webkit-border-radius:10px; -moz-border-radius:10px; border-radius:10px;}
 </style>
 	</head>
-	<body background="arkaplan.jpg">
+	<body background="resim/arkaplan.jpg">
 
 	<center>
-		<img src="logo.png" width="500" height="70" alt="image.jpg" />
+		<img src="resim/logo.png" width="500" height="70" alt="image.jpg" />
  <br><br> <br><br>
 
 	<center>
 
 			<a href="index.html">
- 			<img border="0" src="button1.png" width="200px" height="50px">
+ 			<img border="0" src="resim/button1.png" width="200px" height="50px">
  		</a>
  			<a href="haber.html">
- 			<img border="0" src="button2.png"  width="200px" height="50px">
+ 			<img border="0" src="resim/button2.png"  width="200px" height="50px">
  			</a>
  			<a href="ant.html">
- 			<img border="0" src="button3.png"  width="200px" height="50px">
+ 			<img border="0" src="resim/button3.png"  width="200px" height="50px">
  			</a>
 	</center>
 
