--- a/websayfam-master/haber.html
+++ b/websayfam-master/haber.html
@@ -8,9 +8,9 @@
 	img{ border:5px -webkit-border-radius:10px; -moz-border-radius:10px; border-radius:10px;}
 </style>
 	</head>
-	<body background="resim/arkaplan.jpg">
-
-	<center>
+	<body >
+		<div class="arkaplan">
+			<center>
 		<img src="resim/logo.png" width="500" height="70" alt="resim/image.jpg" />
  <br><br> <br><br>
 
@@ -47,7 +47,7 @@
 
 <div class="haber1" align="center">
 
-	<font face="tahoma" size="5" color="black">
+<font face="Bebas Neue" size="5" color="white">
 		<div class="haberbaslik" align="center">
 			<h1>ZAYIFLAMAK İÇİN</h1>
 		</div>
@@ -67,7 +67,7 @@ Kilo vermenin en basit açıklaması matematikten geçer. Yaktığımız kalorid
 
 
 <div class="haber2" align="center">
-	<font face="tahoma" size="5" color="black">
+	<font face="Bebas Neue" size="5" color="white">
 		<div class="haberbaslik2" align="center">
 			<h1>BOY VE EGZERSİZ</h1>
 		</div>
@@ -91,7 +91,7 @@ Kamburluğunuz veya skolyozunuz varsa bunu çözdüğünüzde, biraz kas gelişt
 <br>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <div class="haber3" align="center">
-	<font face="tahoma" size="5" color="black">
+	<font face="Bebas Neue" size="5" color="white">
 		<div class="haberbaslik3" align="center">
 			<h1>PROTEİN VE HİPERTROFİ</h1>
 		</div>
@@ -111,6 +111,8 @@ Amacı kas hacmini artırmak olan bir bireyin maksimum 3,5-4 saat ara verdiği b
 	</font>
 	
 </div>
+		</div>
+	
 
 	</body>
 </html>
