--- a/websayfam-master/index.html
+++ b/websayfam-master/index.html
@@ -5,11 +5,19 @@
 		<title>bigBiceps</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<style>
+		body
+		{
+			cursor: url(resim/charmander.cur), auto;
+		}
+		.url {cursor: url(charmander.cur),auto;}
 	img{ border:5px -webkit-border-radius:20px; -moz-border-radius:20px; border-radius:40px;}
 </style>
 	</head>
 	
-		<body background="resim/arkaplan.jpg">
+		<body background="resim/arkaplan.jpg" >
+
+
+			
 	<div class="ana">
 	<center>
 		<img src="resim/logo.png" width="500" height="70" alt="resim/image.jpg" />
