--- a/websayfam-master/ant.html
+++ b/websayfam-master/ant.html
@@ -29,7 +29,8 @@
 			<br><br><br><br><br><br><br>
 			
 				<div class="program1">
-					<TABLE BORDER> 
+					<h1>BAŞLANGIÇ SEVİYE ANTRENMAN PROGRAMI</h1>
+					<TABLE border="5" align="center" cellspacing="0" cellpadding="5" align="left" bgcolor="fffff"> 
 						<TR> 
 							<TH>Birinci Gün (Pazartesi)</TH><TH>İkinci Gün (Çarşamba)</TH><TH>	Üçüncü Gün (Cuma)</TH> 
 						</TR> 
@@ -48,6 +49,30 @@
 
 					</TABLE>
 				</div>
+
+				<div class="program2">
+					<h1>İLERİ SEVİYE ANTRENMAN PROGRAMI</h1>
+					<TABLE border="5" align="center" cellspacing="0" cellpadding="5" align="left" bgcolor="fffff"> 
+						<TR> 
+							<TH>Birinci Gün (Pazartesi)</TH><TH>İkinci Gün (Çarşamba)</TH><TH>	Üçüncü Gün (Cuma)</TH> 
+						</TR> 
+						<TR> 
+							<TD>Squat 3x8</TD><TD>Squat 3x8</TD><TD>Squat 3x8</TD> 
+						</TR> 
+						<TR> 
+							<TD>Bench Press 3x8</TD><TD>Overhead Press 3x8</TD><TD>	Bench Press 3x8</TD> 
+						</TR> 
+						<TR> 
+							<TD>Ağırlıklı Barfiks 3x8</TD><TD>Deadlift 1x5</TD><TD>Bentover Row 3x8</TD> 
+						</TR>
+						<TR> 
+							<TD></TD><TD>Ağırlıklı Dips 3x8</TD><TD></TD> 
+						</TR>
+
+					</TABLE>
+					<br><br><br>
+				</div>
+				<img border="12" src="resim/deadlift.jpg" width="1600px" height="800x">
 
 
 	</body>
