--- a/websayfam-master/devaminioku.html
+++ b/websayfam-master/devaminioku.html
@@ -26,6 +26,29 @@
  			<img border="0" src="resim/button3.png"  width="200px" height="50px">
  			</a>
 	</center>
+	<br><br>
+	<div class="paragraf4" align="center">
+		<p>
+			<font size="6" color="black">
+				<b>
+					Bu noktada antrenmandan ne kadar öncesine gittiğimizi cevaplamalıyız. Eğer antrenmandan 1 saat önce vücudumuza besin almaktan bahsediyorsak, kan şekerimiz ve tansiyonumuzdaki etkiden fazlasından bahsetmek zor olacaktır.
+
+Kas geliştirmek için vücudumuzun enerjiye ihtiyacı var. Ağırlık kaldırırken kaslarımızda ve karaciğerimizde depolanmış olan enerji kaynağı glikojenler parçalanır. Açığa çıkan glikozu enerji olarak kullanırız. Dolayısıyla performansımızın yüksek olması için depolanan enerjimizin yeterli olması lazım.
+
+Peki antrenmandan hemen önce yediğimiz besinleri enerji olarak ne kadar depoluyoruz? Pek fazla değil. Antrenmandan 1-2 saat önce yediğimiz besinleri depolayacak kadar sindirmemiz bile zor.
+
+Hatta antrenmana tok karnına başlarsak kan dolaşımı sindirim sistemlerinde olacaktır. Kasların pump olması, kanla dolması midemizi bulandırıp bizi rahatsız bile edebilir.
+
+O zaman antrenmanda hangi enerjiyi kullanıyoruz?
+
+Çoğunlukla bir gün önce yediğimiz besinlerden gelen enerjiyi topluyoruz.
+
+Hiç gerek bayramda, gerekse bir özel günde çok fazla karbonhidrat tüketip, bir gün sonraki antrenmandaki performansınıza inanamadığınız oldu mu? Çünkü bu besinlerdeki karbonhidrat çoktan depolanmış ve kullanıma hazırdır. Antrenmana başlayınca da dolmuş glikojen depoları performansımızı artırır.
+
+Eğer durum buysa neden herkes antrenman öncesi beslenmenin önemini haykırıyor? Tamamen broscience bilgisi mi, yoksa bir gerçeklik payı var mı? Dediğimiz gibi, düşünüldüğü gibi kritik değil. Fakat tamamen anlamsız da diyemeyiz. Özellikle bazı spor branşlarında antrenman öncesi beslenmeye önem vermek oldukça faydalı olabilir.
+				</b>
+			</font>
+		</p>
 
 
 	</body>
