--- a/websayfam-master/devaminioku.html
+++ b/websayfam-master/devaminioku.html
@@ -5,6 +5,11 @@
 		<title>bigBiceps - Haber</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<style>
+		body
+		{
+			cursor: url(resim/charmander.cur), auto;
+		}
+		.url {cursor: url(charmander.cur),auto;}
 	img{ border:5px -webkit-border-radius:10px; -moz-border-radius:10px; border-radius:10px;}
 </style>
 	</head>
