--- a/websayfam-master/zıplayantop.html
+++ b/websayfam-master/zıplayantop.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="tr">
 	<head >
 		<meta charset="UTF-8">
@@ -28,39 +28,25 @@
 
 			<a href="index.html">
  			<img border="0" src="resim/button1.png" width="200px" height="50px">
- 		
+ 		</a>
  			<a href="haber.html">
  			<img border="0" src="resim/button2.png"  width="200px" height="50px">
  			</a>
  			<a href="ant.html">
  			<img border="0" src="resim/button3.png"  width="200px" height="50px">
  			</a>
- 		
+ 		</a>
 
- 		<a href="zıplayantop.html">
+ 		<a href="ziplayantop.html">
  			<img border="0" src="resim/eglence.png" width="200px" height="50px">
  		</a>
 	</center>
 
+<br>
+	<img border="0" src="resim/ball.gif" alt="88Software">
+
  
-<img src="resim/resim.jpg" width="1280" height="500">
-		<center><font color="black" face="tahoma">	<h1>GÖZ ATILMASI GEREKENLER</h1></font></center>
-<div class="altkisim">
-		<div class="asagisol">
-			<img src="resim/piramit1.png" width="450" height="350" alt="Beslenme Piramidi">
-			<font color="black" face="tahoma"><h2>BESLENME PİRAMİDİ</h2></font>
-			<a href="devaminioku2.html" ><h3>Devamını oku..</h3></a>
-		</div>
-		<div class="asagisag">
-			<img src="resim/piramit2.png" width="450" height="350" alt="Antrenman">
-			<font color="black" face="tahoma"><h2>ANTRENMAN PİRAMİDİ</h2>
-			</font>
-			<a href="devaminioku.html"><h3>Devamını oku..</h3></a> 
-        </div>
 
-</div>
-
-	</div>
 
 	</body>
 	
