--- a/websayfam-master/zıplayantop.html
+++ b/websayfam-master/zıplayantop.html
@@ -42,8 +42,19 @@
  		</a>
 	</center>
 
-<br>
-	<img border="0" src="resim/ball.gif" alt="88Software">
+
+<div class="top">
+<section class="balls">
+<div class="ball1"></div>
+<div class="ball2"></div>
+<div class="ball3">Charmander'i kaçır</div>
+<div class="ball4"></div>
+</section>
+</div>
+</center>
+
+
+
 
  
 
