--- a/websayfam-master/ant.html
+++ b/websayfam-master/ant.html
@@ -79,6 +79,26 @@
 				</div>
 				<img border="12" src="resim/deadlift.jpg" width="1600px" height="800x">
 
+<div id="background-wrap">
+    <div class="x1">
+        <div class="cloud"></div>
+    </div>
 
+    <div class="x2">
+        <div class="cloud"></div>
+    </div>
+
+    <div class="x3">
+        <div class="cloud"></div>
+    </div>
+
+    <div class="x4">
+        <div class="cloud"></div>
+    </div>
+
+    <div class="x5">
+        <div class="cloud"></div>
+    </div>
+</div>
 	</body>
 </html>
