--- a/websayfam-master/devaminioku.html
+++ b/websayfam-master/devaminioku.html
@@ -34,7 +34,7 @@
 	<br><br>
 	<div class="paragraf4" align="center">
 		<p>
-			<font size="6" color="black">
+			<font size="5" color="black">
 				<b>
 					Bu noktada antrenmandan ne kadar öncesine gittiğimizi cevaplamalıyız. Eğer antrenmandan 1 saat önce vücudumuza besin almaktan bahsediyorsak, kan şekerimiz ve tansiyonumuzdaki etkiden fazlasından bahsetmek zor olacaktır.
 
@@ -55,6 +55,26 @@ Eğer durum buysa neden herkes antrenman öncesi beslenmenin önemini haykırıy
 			</font>
 		</p>
 
+<div id="background-wrap">
+    <div class="x1">
+        <div class="cloud"></div>
+    </div>
 
+    <div class="x2">
+        <div class="cloud"></div>
+    </div>
+
+    <div class="x3">
+        <div class="cloud"></div>
+    </div>
+
+    <div class="x4">
+        <div class="cloud"></div>
+    </div>
+
+    <div class="x5">
+        <div class="cloud"></div>
+    </div>
+</div>
 	</body>
 </html>
