--- a/websayfam-master/index.html
+++ b/websayfam-master/index.html
@@ -17,8 +17,6 @@
 	
 		<body background="resim/arkaplan.jpg" >
 			<br><br>
-
-
 			
 	<div class="ana">
 	<center>
@@ -47,13 +45,13 @@
 		<center><font color="black" face="tahoma">	<h1>GÖZ ATILMASI GEREKENLER</h1></font></center>
 <div class="altkisim">
 		<div class="asagisol">
-			<img src="resim/piramit1.png" width="450" height="350" alt="Beslenme Piramidi">
-			<font color="black" face="tahoma"><h2>BESLENME PİRAMİDİ</h2></font>
+			<img src="resim/piramit2.png" width="450" height="350" alt="Beslenme Piramidi">
+			<font color="black" face="tahoma"><h2>ANTRENMAN PİRAMİDİ</h2></font>
 			<a href="devaminioku2.html" ><h3>Devamını oku..</h3></a>
 		</div>
 		<div class="asagisag">
-			<img src="resim/piramit2.png" width="450" height="350" alt="Antrenman">
-			<font color="black" face="tahoma"><h2>ANTRENMAN PİRAMİDİ</h2>
+			<img src="resim/piramit1.png" width="450" height="350" alt="Antrenman">
+			<font color="black" face="tahoma"><h2>BESLENME PİRAMİDİ</h2>
 			</font>
 			<a href="devaminioku.html"><h3>Devamını oku..</h3></a> 
         </div>
@@ -61,6 +59,28 @@
 </div>
 
 	</div>
+<div id="background-wrap">
+    <div class="x1">
+        <div class="cloud"></div>
+    </div>
+
+    <div class="x2">
+        <div class="cloud"></div>
+    </div>
+
+    <div class="x3">
+        <div class="cloud"></div>
+    </div>
+
+    <div class="x4">
+        <div class="cloud"></div>
+    </div>
+
+    <div class="x5">
+        <div class="cloud"></div>
+    </div>
+</div>
+
 
 	</body>
 	
