--- a/websayfam-master/haber.html
+++ b/websayfam-master/haber.html
@@ -14,6 +14,7 @@
 </style>
 	</head>
 	<body >
+
 		<div class="arkaplan">
 			<center>
 		<img src="resim/logo.png" width="500" height="70" alt="resim/image.jpg" />
@@ -94,7 +95,7 @@ Kamburluğunuz veya skolyozunuz varsa bunu çözdüğünüzde, biraz kas gelişt
 	</font>
 </div>
 <br>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <div class="haber3" align="center">
 	<font face="Bebas Neue" size="5" color="white">
 		<div class="haberbaslik3" align="center">
@@ -117,7 +118,29 @@ Amacı kas hacmini artırmak olan bir bireyin maksimum 3,5-4 saat ara verdiği b
 	
 </div>
 		</div>
+		<br>
 	
+		<iframe border="0" src="https://www.haberler.com/fitness/s4/" width="2000" height="800" scrolling="yes">
+		<div id="background-wrap">
+    <div class="x1">
+        <div class="cloud"></div>
+    </div>
 
+    <div class="x2">
+        <div class="cloud"></div>
+    </div>
+
+    <div class="x3">
+        <div class="cloud"></div>
+    </div>
+
+    <div class="x4">
+        <div class="cloud"></div>
+    </div>
+
+    <div class="x5">
+        <div class="cloud"></div>
+    </div>
+</div> 
 	</body>
 </html>
