--- a/websayfam-master/zıplayantop.html
+++ b/websayfam-master/zıplayantop.html
@@ -42,23 +42,35 @@
  		</a>
 	</center>
 
-
-<div class="top">
-<section class="balls">
-<div class="ball1"></div>
-<div class="ball2"></div>
-<div class="ball3">Charmander'i kaçır</div>
-<div class="ball4"></div>
-</section>
-</div>
-</center>
-
+<br><br><br>
+<iframe scrolling='no' frameborder='0' style='border:5px solid #559900;' width='500' height='400'src='https://www.rekoroyun.com/rekor_oyun.php?max=8&h=400&bg=99CC00&yr=FFFFFF&lr=559900&br=559900&baslik=Eglenmek Icin&tur=1&grup=&link=2'></iframe>
+<br>
+  <img src="http://dl5.glitter-graphics.net/pub/1295/1295845cr8zzzdk38.gif" _fcksavedurl="http://dl5.glitter-graphics.net/pub/1295/1295845cr8zzzdk38.gif" width=150 height=100 border=0></a>   
 
 
 
  
+<div id="background-wrap">
+    <div class="x1">
+        <div class="cloud"></div>
+    </div>
 
+    <div class="x2">
+        <div class="cloud"></div>
+    </div>
 
+    <div class="x3">
+        <div class="cloud"></div>
+    </div>
+
+    <div class="x4">
+        <div class="cloud"></div>
+    </div>
+
+    <div class="x5">
+        <div class="cloud"></div>
+    </div>
+</div>
 	</body>
 	
 	
